# lince

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  demo.webm  grant-plugin-permissions.sh  prompt-quickstart-improvements.md  quickstart.sh
agent-ready-skill/: README.md
backlog/: config.yml
claudedocs/: telebridge-proposal.md
docs/: CNAME  index.html  install  migration-v2-developers.md  migration-v2-users.md
lince-config/: README.md  install.sh  lince-config  uninstall.sh  update.sh
lince-dashboard/: MULTI-AGENT-GUIDE.md  README.md  agents-defaults.toml  agents-template.toml  config.toml  install.sh  uninstall.sh  update.sh
lince-dashboard/plugin/: Cargo.toml  build.sh  lince-dashboard.wasm
lince-dashboard/plugin/src/: agent.rs  config.rs  dashboard.rs  main.rs  pane_manager.rs  recents.rs  sandbox_backend.rs  state_file.rs  types.rs
lince-lab/: README.md  install.sh  lince-lab  uninstall.sh  update.sh
registry.d/: README.md  aider.toml  amp.toml  bash.toml  claude.toml  codex.toml  fish.toml  gemini.toml  opencode.toml  pi.toml  providers.toml  zsh.toml
sandbox/: CHEATSHEET.md  README.md  agent-sandbox  agents-defaults.toml  claude-sandbox  config.toml.example  install.sh  test-sandbox.sh  to-be-validated.md  uninstall.sh  update.sh
scripts/: test-vm.sh  (+3 more)
voxtts/: README.md  config.example.toml  install.sh  pyproject.toml  uninstall.sh  update.sh
voxtts/src/voxtts/: __init__.py  __main__.py  audio.py  cli.py  config.py  engine.py  multiplexer.py  reader.py  text.py
voxtts/src/voxtts/engines/: __init__.py  kokoro.py  piper.py
(+396 files in other folders)
